clusters/apps/workloads/n8n/05-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: n8n
  labels:
    app.kubernetes.io/name: n8n
    app.kubernetes.io/part-of: fleet
    app.kubernetes.io/managed-by: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`n8n.apps.froggyleonard.com`)
      kind: Rule
      services:
        - name: n8n
          port: 80
